feat: agregar el complemento JaCoCo para la cobertura de código (En el pom) y actualizar CompanyServiceImpl para un uso más limpio de streams